# cone.calendar

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE.rst  Makefile  README.rst  constraints-mxdev.txt  i18n.sh  mx.ini  package.json  pyproject.toml  requirements-mxdev.txt  setup.py
.github/workflows/: test.yml
js/: rollup.conf.js
js/src/: bundle.js  calendar.js  fullcalendar.js
js/src/bootstrap5/: calendar.js  fullcalendar_bundle.js
js/src/default/: calendar.js
js/tests/: test_calendar.js
scripts/: clean.sh  i18n.sh  install.sh
scss/: styles.scss
scss/default/: styles.scss
src/cone/calendar/: __init__.py  interfaces.py  tests.py
src/cone/calendar/browser/: __init__.py  calendar.pt  calendar.py  calendar.rst
src/cone/calendar/browser/static/: calendar.js  calendar.min.js  package.json
src/cone/calendar/browser/static/calendar/: calendar.css  cone.calendar.css  cone.calendar.js  cone.calendar.min.js
src/cone/calendar/browser/static/calendar/bootstrap5/: cone.calendar.css  cone.calendar.js  cone.calendar.min.js
src/cone/calendar/browser/static/calendar/default/: cone.calendar.css
src/cone/calendar/browser/static/fullcalendar/: fullcalendar.js  fullcalendar.min.js
src/cone/calendar/browser/static/fullcalendar/bootstrap5/: fullcalendar.js
src/cone/calendar/tests/: test_calendar.py  test_package.py
src/cone/fullcalendar/: __init__.py  tests.py
src/cone/fullcalendar/browser/: calendar.pt  calendar.py  calendar.rst  fullcalendar.pt  fullcalendar.py  fullcalendar.rst
src/cone/fullcalendar/browser/static/: calendar.js  package.json
