[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cone.calendar"
version = "1.0a2.dev0"
description = "jQuery Fullcalendar integration for cone.app"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
keywords = ["node", "pyramid", "cone", "web"]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "cone.app",
    "yafowil.widget.cron",
]

[project.optional-dependencies]
test = [
    "zope.testrunner",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.calendar"

[tool.zest-releaser]
create-wheel = true
